fix(backtest): 배당 재투자를 떼어낸다
- 조정 종가로 사고 팔아 재투자가 이미 가격에 반영돼 있다. 또 사면 두 번 센다
- 운영에서는 배당일 정렬 누락으로 무동작이었다. 우연히 맞던 동작을 명시적으로 바꾼다
- DividendReinvestor 의 범위 조회 정렬도 고친다. 다시 연결할 때 쓴다
- 재투자 테스트를 거래 수·재투자액 검증으로 교체한다